# games101_homework_mumei

./: README.md  excute.sh  questions.md
00/: CMakeLists.txt
01/: CMakeLists.txt  Triangle.hpp
Assignment0/: main.cpp
Assignment1/: main.cpp  rasterizer.hpp
Assignment2/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
